--- a/src/Products/Products.css
+++ b/src/Products/Products.css
@@ -2,14 +2,16 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    margin-left: 20rem;
+    margin-left: 12rem;
+   
     margin-top: 2rem;
+    
     z-index: -2;
   }
   
   .card {
     margin: 20px;
-    border: 2px solid whitesmoke;
+    border: 2px solid #ededed;
     padding: 20px;
     cursor: pointer;
   }
